--- a/package.json
+++ b/package.json
@@ -7,20 +7,33 @@
     "dev": "cross-env NODE_ENV=development webpack --config ./webpack.config.js --mode=development && node node_modules/playcanvas-sync/pcsync.js pushAll --yes",
     "dev-watch": "cross-env NODE_ENV=development webpack --config ./webpack.config.js --mode=development --watch",
     "pcsync": "node node_modules/playcanvas-sync/pcsync.js pushAll --yes",
-    "eslint": "npx eslint -c .eslintrc.js --ext .js,.jsx,.ts,.tsx ."
+    "eslint": "npx eslint -c .eslintrc.js --ext .js,.jsx,.ts,.tsx .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Lloyd Evans",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
+    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "playcanvas-sync": "github:playcanvas/playcanvas-sync",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
